fix attachment alignment

--- a/src/components/MarkdownRender/MarkdownRender.css
+++ b/src/components/MarkdownRender/MarkdownRender.css
@@ -17,7 +17,7 @@
   text-align: left;
 }
 
-#content-header > h2:nth-child(2) .MarkdownRenderAttachments {
+.MarkdownRenderAttachments {
   text-align: center !important;
   margin-bottom: 15px;
 }
